--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -1,8 +1,11 @@
 ---
 patches:
-  - path: ./image_patch.json
+  - path: ./deployment_patch.json
     target:
       kind: Deployment
+  - path: ./service_patch.json
+    target:
+      kind: Service
 resources:
   - deployment.yaml
   - service.yaml
