--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -1,10 +1,11 @@
 name: pr-deployment
-
 on:
   issue_comment:
     types: [created]
   manual_dispatch:
-
+permissions:
+  id-token: write
+  contents: read
 jobs:
   deploy-check:
     runs-on: ubuntu-latest
