--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -2,7 +2,7 @@ name: pr-deployment
 on:
   issue_comment:
     types: [created]
-  manual_dispatch:
+  workflow_dispatch:
 permissions:
   id-token: write
   contents: read
