Fixing output of shared workflow.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,7 @@ on:
     outputs:
       context:
         description: Context that was used as an input to the workflow.
+        value: ${{ inputs.passthrough-context }}
     secrets:
       AWS_ASSUME_ROLE_ARN:
         required: true
@@ -75,8 +76,6 @@ jobs:
   kubernetes:
     needs: [push]
     runs-on: ubuntu-latest
-    outputs:
-      context: ${{ inputs.passthrough-context }}
     steps:
       - uses: actions/checkout@v2
       - name: configure AWS credentials
