Adding a default to the passthrough-context input to see if it passes validation on the output declaration.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,7 @@ on:
       passthrough-context:
         description: Context to pass to the next job as output.
         type: string
+        default: ''
     outputs:
       context:
         description: Context that was used as an input to the workflow.
