--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -9,6 +9,7 @@ permissions:
   deployments: write
   statuses: write
   pull-requests: read
+  issues: write
 jobs:
   deploy-check:
     runs-on: ubuntu-latest
