--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -4,13 +4,11 @@ on:
     types: [created]
   workflow_dispatch:
 permissions:
-  write-all
-  # id-token: write
-  # contents: read
-  # deployments: write
-  # statuses: write
-  # pull-requests: read
-  # issues: write
+  id-token: write
+  contents: read
+  deployments: write
+  statuses: write
+  pull-requests: write
 jobs:
   deploy-check:
     runs-on: ubuntu-latest
