--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -84,10 +84,17 @@ jobs:
           state: in_progress
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-      - name: debug deployment data
+      - name: write deployment data
         env:
           CONTEXT: ${{ steps.create_deployment.outputs.data }}
-        run: echo "::debug::$CONTEXT"
+        run: |
+          mkdir -p artifacts
+          echo $CONTEXT > artifacts/deployment.json
+      - name: upload deployment data artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: deployment-data
+          path: artifacts/deployment.json
 
   deploy:
     name: deploy the pull request
@@ -107,13 +114,23 @@ jobs:
     needs: [deploy]
     runs-on: ubuntu-latest
     steps:
+      - name: get download artifact
+        uses: actions/download-artifact@v2
+        id: download
+        with:
+          name: deployment-data
+      - name: read deployment data
+        id: deployment-data
+        run: |
+          export DEPLOYMENT=$(cat artifacts/deployment.json) 
+          echo "::set-output name=deployment::$DEPLOYMENT"
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ fromJson(needs.deploy.outputs.context).id }}
+          deployment: ${{ fromJson(steps.deployment-data.outputs.deployment).id }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
