--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -54,6 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+      - uses: actions/checkout@v2
       - uses: ./actions/kubernetes
         with:
           aws-region: ${{ env.AWS_REGION }}
