--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -7,6 +7,8 @@ permissions:
   id-token: write
   contents: read
 env:
+  APP: ${{ secrets.APP }}
+  ECR_REPO: ${{ secrets.ECR_REPO }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
   AWS_ASSUME_ROLE_ARN: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
   AWS_SESSION_DURATION: ${{ secrets.AWS_SESSION_DURATION }}
@@ -25,7 +27,6 @@ jobs:
   push:
     needs: [test]
     runs-on: ubuntu-latest
-    environment: production
     steps:
       - uses: actions/checkout@v2
       - name: configure AWS credentials
@@ -52,10 +53,9 @@ jobs:
   kubernetes:
     needs: [push]
     runs-on: ubuntu-latest
-    environment: production
     steps:
       - uses: actions/checkout@v2
-      - uses: ./actions/kubernetes
+      - uses: ./.github/workflows/actions/kubernetes
         with:
           aws-region: ${{ env.AWS_REGION }}
           aws-role-to-assume: ${{ env.AWS_ASSUME_ROLE_ARN }}
