--- a/.github/workflows/actions/kubernetes/action.yaml
+++ b/.github/workflows/actions/kubernetes/action.yaml
@@ -19,6 +19,9 @@ inputs:
   ecr-repo-name:
     type: string
     required: true
+  image-tag:
+    type: string
+    required: true
 runs:
   using: composite
   steps:
@@ -38,7 +41,7 @@ runs:
         AWS_EKS_CLUSTER: ${{ inputs.aws-eks-cluster }}
         ECR_REPO: ${{ inputs.ecr-repo-name }}
         ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: ${{ inputs.image-tag }}
       shell: bash
       run: |
         export FULL_IMAGE="$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
