--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -95,6 +95,8 @@ jobs:
     name: build and push image
     needs: [setup-deployment]
     runs-on: ubuntu-latest
+    outputs:
+      deployment: ${{ needs.setup-deployment.outputs.deployment }}
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/actions/ecr-push
@@ -108,6 +110,8 @@ jobs:
   kubernetes:
     needs: [push]
     runs-on: ubuntu-latest
+    outputs:
+      deployment: ${{ needs.push.outputs.deployment }}
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/actions/kubernetes
@@ -143,7 +147,8 @@ jobs:
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ fromJson(steps.deployment-data.outputs.deployment).id }}
+          deployment: ${{ needs.kubernetes.outputs.deployment }}
+          # deployment: ${{ fromJson(steps.deployment-data.outputs.deployment).id }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
@@ -155,7 +160,8 @@ jobs:
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ fromJson(steps.deployment-data.outputs.deployment).id }}
+          deployment: ${{ needs.kubernetes.outputs.deployment }}
+          # deployment: ${{ fromJson(steps.deployment-data.outputs.deployment).id }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: failure
         env:
