--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -6,12 +6,13 @@ on:
 permissions:
   id-token: write
   contents: read
-env:
-  DOCKER_BUILDKIT: 1
-  BUILDKIT_INLINE_CACHE: 1
 jobs:
   test:
+    name: run tests
     runs-on: ubuntu-latest
+    env:
+      DOCKER_BUILDKIT: 1
+      BUILDKIT_INLINE_CACHE: 1
     steps:
       - uses: actions/checkout@v2
       - name: run functional tests
@@ -19,6 +20,7 @@ jobs:
       - name: run e2e tests
         run: npm run container-test-e2e
   push:
+    name: build and push to ECR
     needs: [test]
     runs-on: ubuntu-latest
     steps:
@@ -32,6 +34,7 @@ jobs:
           build-target: app
           image-tag: ${{ github.sha }}
   kubernetes:
+    name: deploy to Kubernetes
     needs: [push]
     runs-on: ubuntu-latest
     steps:
